--- a/HEquityJefferson/appsettings.json
+++ b/HEquityJefferson/appsettings.json
@@ -6,8 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "HEquityJeffersonContext": "Server=(localdb)\\mssqllocaldb;Database=HEquityJeffersonContext-6c6a80d6-98cd-4f66-a350-1472d00e3f98;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  "AllowedHosts": "*"
 }
